--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,10 +73,16 @@ spring.jta.atomikos.datasource.concurrent-connection-validation=false
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
-#spring.queries.users-query=select email, password, active from users where email=?
+#spring.queries.users-query=select email, password, enabled from users where email=?
 #spring.queries.roles-query=select u.email, r.role from users u inner join users_roles ur on(u.user_id=ur.user_id) inner join roles r on(ur.role_id=r.role_id) where u.email=?
 
 # ==============================================================
 # = Initialize the database using data.sql script
 # ==============================================================
 #spring.datasource.initialization-mode=always
+
+#spring.main.allow-bean-definition-overriding=true
+#spring.thymeleaf.view-names=/*
+
+#spring.messages.basename=validation
+#message.source.basename=i18n/messages
