--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
+# ==============================================================
+# = Spring / boot
+# ==============================================================
+
 server.port=8081
 #server.servlet.context-path= /demo
 
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
 
-#MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/workDB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ==============================================================
 # = Keep the connection alive if idle for a long time (needed in production)
@@ -24,6 +23,13 @@ spring.datasource.tomcat.validation-query=SELECT 1
 # = JPA / HIBERNATE
 # ===============================
 
+#MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/workDB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=root
+spring.datasource.password=123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#JPA
 spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
@@ -37,7 +43,6 @@ spring.jpa.show-sql=false
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -48,27 +53,33 @@ spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
-#example
-#spring.datasource.data=classpath:/data-domain.sql,file:/c:/sql/data-reference.sql,data-complex.sql
-#spring.datasource.data=classpath:/META-INF/init-import.sql
-#spring.jpa.properties.hibernate.hbm2ddl.import_files=init-import.sql
+
 
 # ==============================================================
-# = Initialize the database using data.sql script
+# = Spring / Log
 # ==============================================================
-#spring.datasource.initialization-mode=always
-
-# логи
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
-logging.level.org.hibernate.SQL=off
+## if no active profile, default is 'default'
+logging.config= classpath:logback-spring.xml
+#
+spring.profiles.active=prod
+#
+#logging.level.org.springframework.web=error
+#logging.level.com.example.demo=error
+#logging.level.org.hibernate.SQL=off
 #logging.level.org.hibernate.type.descriptor.sql=trace
-logging.level.=error
+#logging.level.=error
+#
+#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+#logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+#logging.pattern.file=%d %p %c{1.} [%t] %m%n
 
-#security.user.name=admin
-#security.user.password=secret
-#security.user.role=USER,ADMIN
 
-spring.jta.atomikos.datasource.concurrent-connection-validation=false
+
+
+
+
+
+
 
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
@@ -76,13 +87,25 @@ spring.jta.atomikos.datasource.concurrent-connection-validation=false
 #spring.queries.users-query=select email, password, enabled from users where email=?
 #spring.queries.roles-query=select u.email, r.role from users u inner join users_roles ur on(u.user_id=ur.user_id) inner join roles r on(ur.role_id=r.role_id) where u.email=?
 
+#security.user.name=admin
+#security.user.password=secret
+#security.user.role=USER,ADMIN
+
+#spring.messages.basename=validation
+
+
 # ==============================================================
 # = Initialize the database using data.sql script
 # ==============================================================
 #spring.datasource.initialization-mode=always
 
-#spring.main.allow-bean-definition-overriding=true
-#spring.thymeleaf.view-names=/*
+#example
+#spring.datasource.data=classpath:/data-domain.sql,file:/c:/sql/data-reference.sql,data-complex.sql
+#spring.datasource.data=classpath:/META-INF/init-import.sql
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=init-import.sql
 
-#spring.messages.basename=validation
+
 #message.source.basename=i18n/messages
+#spring.thymeleaf.view-names=/*
+# spring.main.allow-bean-definition-overriding=true
+spring.jta.atomikos.datasource.concurrent-connection-validation=false
