--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.tomcat.validation-query=SELECT 1
 #MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/workDB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JPA
@@ -108,4 +108,4 @@ spring.profiles.active=prod
 #message.source.basename=i18n/messages
 #spring.thymeleaf.view-names=/*
 # spring.main.allow-bean-definition-overriding=true
-spring.jta.atomikos.datasource.concurrent-connection-validation=false
+#spring.jta.atomikos.datasource.concurrent-connection-validation=false
