--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.tomcat.validation-query=SELECT 1
 #MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/workDB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JPA
@@ -75,12 +75,6 @@ spring.profiles.active=prod
 
 
 
-
-
-
-
-
-
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
@@ -95,17 +89,18 @@ spring.profiles.active=prod
 
 
 # ==============================================================
-# = Initialize the database using data.sql script
+# = Initialize the database using data1.sql script
 # ==============================================================
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 
 #example
 #spring.datasource.data=classpath:/data-domain.sql,file:/c:/sql/data-reference.sql,data-complex.sql
-#spring.datasource.data=classpath:/META-INF/init-import.sql
-#spring.jpa.properties.hibernate.hbm2ddl.import_files=init-import.sql
-
+spring.datasource.data=classpath:/static/data-import.sql
+#spring.jpa.properties.hibernate.hbm2ddl.import_files=data1.sql
+#
 
 #message.source.basename=i18n/messages
 #spring.thymeleaf.view-names=/*
 # spring.main.allow-bean-definition-overriding=true
 #spring.jta.atomikos.datasource.concurrent-connection-validation=false
+
