--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -85,22 +85,28 @@ spring.profiles.active=prod
 #security.user.password=secret
 #security.user.role=USER,ADMIN
 
-#spring.messages.basename=validation
-
-
 # ==============================================================
-# = Initialize the database using data1.sql script
+# = Initialize the database using data sql script
 # ==============================================================
 spring.datasource.initialization-mode=always
-
-#example
-#spring.datasource.data=classpath:/data-domain.sql,file:/c:/sql/data-reference.sql,data-complex.sql
 spring.datasource.data=classpath:/static/data-import.sql
-#spring.jpa.properties.hibernate.hbm2ddl.import_files=data1.sql
-#
 
-#message.source.basename=i18n/messages
-#spring.thymeleaf.view-names=/*
-# spring.main.allow-bean-definition-overriding=true
-#spring.jta.atomikos.datasource.concurrent-connection-validation=false
 
+#spring.thymeleaf.enabled = true
+spring.thymeleaf.enabled = false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=utf-8
+spring.thymeleaf.prefix=/WEB-INF/pages/
+
+# ==============================================================
+# = Initialize the email settings
+# ==============================================================
+#spring.mail.default-encoding=UTF-8
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=stanislavgr79@gmail.com
+#spring.mail.password=RdsMutmsRvXAkvA5
+#spring.mail.port=587
+#spring.mail.protocol=smtp
+#spring.mail.test-connection=false
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
