--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mvc.view.suffix=.jsp
 #spring.datasource.validationQuery = SELECT 1
 
 #When in production/RELEASE version, you've to change to this
-spring.datasource.tomcat.test-while-idle=true
+spring.datasource.tomcat.test-while-idle=false
 spring.datasource.tomcat.validation-query=SELECT 1
 
 # ===============================
@@ -52,7 +52,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-
 
 
 # ==============================================================
@@ -101,12 +100,42 @@ spring.thymeleaf.prefix=/WEB-INF/pages/
 # ==============================================================
 # = Initialize the email settings
 # ==============================================================
-#spring.mail.default-encoding=UTF-8
-#spring.mail.host=smtp.gmail.com
-#spring.mail.username=stanislavgr79@gmail.com
-#spring.mail.password=RdsMutmsRvXAkvA5
-#spring.mail.port=587
-#spring.mail.protocol=smtp
-#spring.mail.test-connection=false
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=stanislavgr79@gmail.com
+spring.mail.password=RdsMutmsRvXAkvA5
+
+spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+
+
+mail.from=stanislavgr79@gmail.com
+
+mail.register.message=email-register
+mail.order.message[0]=email-newOrder
+mail.order.message[1]=email-updateStatusOrder
+
+mail.register.subject=You register In Shop.ru successfully!
+mail.order.subject[0]=You have same order from Shop.ru
+mail.order.subject[1]=You Order In Shop.ru ready!
+
+#mail.transport.protocol=smtp
+#mail.smtp.starttls.enable=true
+#mail.debug=true
+#mail.smtp.auth=true
+#mail.smtp.quitwait=false
+#mail.test-connection=false
+#
+#mail.server.host=smtp.gmail.com
+#mail.server.port=587
+#mail.server.protocol=smtp
+#mail.server.username=stanislavgr79@gmail.com
+#mail.server.password=RdsMutmsRvXAkvA5
