--- a/pom.xml
+++ b/pom.xml
@@ -194,8 +194,14 @@
 		</dependency>
 
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.2.0.RELEASE</version>
+        </dependency>
 
-        <!--		<dependency>-->
+
+		<!--		<dependency>-->
         <!--			<groupId>org.springframework</groupId>-->
         <!--			<artifactId>spring-test</artifactId>-->
         <!--			<version>5.2.0.RELEASE</version>-->
@@ -210,6 +216,18 @@
 <!--			<artifactId>thymeleaf-layout-dialect</artifactId>-->
 <!--		</dependency>-->
 
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-configuration-processor</artifactId>-->
+<!--			<version>2.2.0.RELEASE</version>-->
+<!--			<optional>true</optional>-->
+<!--		</dependency>-->
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.0.Final</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>
     </dependencies>
 
 
@@ -227,7 +245,16 @@
 				<configuration>
 					<source>${java.version}</source> <!-- or higher, depending on your project -->
 					<target>${java.version}</target> <!-- or higher, depending on your project -->
+<!--					<annotationProcessors>-->
+<!--						<annotationProcessor>org.springframework.boot.configurationprocessor.ConfigurationMetadataAnnotationProcessor</annotationProcessor>-->
+<!--						<annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>-->
+<!--					</annotationProcessors>-->
 					<annotationProcessorPaths>
+<!--						<path>-->
+<!--							<groupId>org.springframework.boot</groupId>-->
+<!--							<artifactId>spring-boot-configuration-processor</artifactId>-->
+<!--							<version>2.2.0.RELEASE</version>-->
+<!--						</path>-->
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
