--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -127,6 +127,7 @@ mail.register.subject=You register In Shop.ru successfully!
 mail.order.subject[0]=You have same order from Shop.ru
 mail.order.subject[1]=You Order In Shop.ru ready!
 
+
 #mail.transport.protocol=smtp
 #mail.smtp.starttls.enable=true
 #mail.debug=true
@@ -139,3 +140,5 @@ mail.order.subject[1]=You Order In Shop.ru ready!
 #mail.server.protocol=smtp
 #mail.server.username=stanislavgr79@gmail.com
 #mail.server.password=RdsMutmsRvXAkvA5
+
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
