--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # = Spring / boot
 # ==============================================================
 
-server.port=8081
+server.port=8082
 #server.servlet.context-path= /demo
 
 spring.mvc.view.prefix=/WEB-INF/pages/
@@ -24,9 +24,9 @@ spring.datasource.tomcat.validation-query=SELECT 1
 # ===============================
 
 #MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/workDB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/workdb?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #JPA
@@ -106,7 +106,7 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.username=stanislavgr79@gmail.com
-spring.mail.password=RdsMutmsRvXAkvA5
+spring.mail.password=1234567
 
 spring.mail.test-connection=false
 spring.mail.properties.mail.smtp.auth=true
@@ -139,6 +139,6 @@ mail.order.subject[1]=You Order In Shop.ru ready!
 #mail.server.port=587
 #mail.server.protocol=smtp
 #mail.server.username=stanislavgr79@gmail.com
-#mail.server.password=RdsMutmsRvXAkvA5
+#mail.server.password=1234567
 
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
